opam-version: "2.0"
version: "1.0.1"
synopsis: "Yet Another Traffic Engineering System (Yates)"
maintainer: "Praveen Kumar <praveenk@cs.cornell.edu>"
authors: "Praveen Kumar <praveenk@cs.cornell.edu>, Chris Yu <christoy@cs.cmu.edu>, Yang Yuan <yy528@cornell.edu>, Nate Foster <jnfoster@cs.cornell.edu>, Robert Kleinberg <rdk@cs.cornell.edu>, and Robert Soulé <robert.soule@usi.ch>"
homepage: "https://www.cs.cornell.edu/~praveenk/yates/yates"
bug-reports: "https://github.com/cornell-netlab/yates/issues"
dev-repo: "https://github.com/cornell-netlab/yates.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]

depends: [
  "odoc"
  "ocaml" {>= "4.12.0"}
  "ppx_cstruct"
  "ppx_deriving"
  "sedlex"
  "ocamlgraph"
  "core"
  "base64"
  "tcpip"
  "yojson"
  "sexplib"
  "frenetic" {>= "5.0.5"}
]
