(library
  (name yates_solvers)
  (public_name yates.solvers)
  (libraries
     core
     base64
     cstruct
     sexplib
     str
     yates.routing)
  (preprocess (pps ppx_cstruct
                   ppx_deriving.std
                   ppx_compare
                   ppx_enumerate
                   ppx_hash
                   ppx_fields_conv
                   ppx_sexp_conv
                   sedlex.ppx))
)
